development of new version
Signed-off-by: Rodolfo Conde <aragorn@ciencias.unam.mx>

--- a/OBTUtilerias/OBTUtils.csproj
+++ b/OBTUtilerias/OBTUtils.csproj
@@ -76,9 +76,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BuscadorTG.cs" />
     <Compile Include="GenericCompoundResult.cs" />
     <Compile Include="Generic\GenericCompoundResult.cs" />
+    <Compile Include="IncrementalSeeker.cs" />
     <Compile Include="OBTApplicationInformation.cs" />
     <Compile Include="Messaging\ConsoleMessenger.cs" />
     <Compile Include="Messaging\ComponentMessengers.cs" />
