Improvements for the OBTUtils.Data namespace and components are finished (for now)
Signed-off-by: Rodolfo Conde <aragorn@ciencias.unam.mx>

--- a/OBTUtilerias/OBTUtils.csproj
+++ b/OBTUtilerias/OBTUtils.csproj
@@ -79,6 +79,7 @@
     <Compile Include="GenericCompoundResult.cs" />
     <Compile Include="Generic\GenericCompoundResult.cs" />
     <Compile Include="IncrementalSeeker.cs" />
+    <Compile Include="Messaging\FileMessenger.cs" />
     <Compile Include="OBTApplicationInformation.cs" />
     <Compile Include="Messaging\ConsoleMessenger.cs" />
     <Compile Include="Messaging\ComponentMessengers.cs" />
