--- a/OBTUtils.Enterprise/OBTUtils.Enterprise.csproj
+++ b/OBTUtils.Enterprise/OBTUtils.Enterprise.csproj
@@ -41,7 +41,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Messaging\ServiceEventLogMessenger.cs" />
+    <Compile Include="Messaging\EventLogMessenger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
