We add more implementations of the IMessenger iface and also add the installer's project
Signed-off-by: Rodolfo Conde <aragorn@ciencias.unam.mx>

--- a/OBTUtilerias/OBTUtils.csproj
+++ b/OBTUtilerias/OBTUtils.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Generic\GenericCompoundResult.cs" />
     <Compile Include="IncrementalSeeker.cs" />
     <Compile Include="Messaging\FileMessenger.cs" />
+    <Compile Include="Messaging\StreamMessenger.cs" />
     <Compile Include="OBTApplicationInformation.cs" />
     <Compile Include="Messaging\ConsoleMessenger.cs" />
     <Compile Include="Messaging\ComponentMessengers.cs" />
