--- a/OBTMultSQLCodeGen/OBTMultSQLCodeGen.csproj
+++ b/OBTMultSQLCodeGen/OBTMultSQLCodeGen.csproj
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build">
   <PropertyGroup>
-    <ProjectGuid>{C63B7E01-5254-4F81-872A-9F02509FE5E5}</ProjectGuid>
+    <ProjectGuid>{F148B375-1B00-4661-A038-1B7AF2BC4AD0}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>Exe</OutputType>
-    <RootNamespace>OBTSQLServerCGen</RootNamespace>
-    <AssemblyName>OBTSQLServerCGen</AssemblyName>
+    <RootNamespace>OBTMultSQLCodeGen</RootNamespace>
+    <AssemblyName>OBTMultSQLCodeGen</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -32,7 +32,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -46,9 +45,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MultipleSQLGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SQLServerSQLGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DBSQLUtils\OBTUtils.Data.csproj">
@@ -59,9 +58,6 @@
       <Project>{AF957518-F233-458B-B495-B72B3BAAA548}</Project>
       <Name>OBTUtils</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
 </Project>
