The windows installer is finished. we are ready to begin Beta stage !!!
Signed-off-by: Rodolfo Conde <aragorn@ciencias.unam.mx>

--- a/OBTUtils.Enterprise/OBTUtils.Enterprise.csproj
+++ b/OBTUtils.Enterprise/OBTUtils.Enterprise.csproj
@@ -10,6 +10,10 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <AppDesignerFolder>Properties</AppDesignerFolder>
+    <SignAssembly>True</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\OBTUtils.snk</AssemblyOriginatorKeyFile>
+    <DelaySign>False</DelaySign>
+    <AssemblyOriginatorKeyMode>File</AssemblyOriginatorKeyMode>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -45,13 +49,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\OBTUtilerias\OBTUtils.csproj">
+    <Folder Include="Messaging" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OBTUtils\OBTUtils.csproj">
       <Project>{AF957518-F233-458B-B495-B72B3BAAA548}</Project>
       <Name>OBTUtils</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Messaging" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
 </Project>
