--- a/Database/OBTUtils.Data/OBTUtils.Data.csproj
+++ b/Database/OBTUtils.Data/OBTUtils.Data.csproj
@@ -1,22 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build">
   <PropertyGroup>
-    <ProjectGuid>{F148B375-1B00-4661-A038-1B7AF2BC4AD0}</ProjectGuid>
+    <ProjectGuid>{DAEE2802-8B55-4331-9326-1ADFC94E1A47}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>OBTMultSQLCodeGen</RootNamespace>
-    <AssemblyName>OBTMultSQLCodeGen</AssemblyName>
+    <OutputType>Library</OutputType>
+    <RootNamespace>OBTUtils</RootNamespace>
+    <AssemblyName>OBTUtils.Data</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RunCodeAnalysis>True</RunCodeAnalysis>
+    <SignAssembly>True</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\OBTUtils.snk</AssemblyOriginatorKeyFile>
+    <DelaySign>False</DelaySign>
+    <AssemblyOriginatorKeyMode>File</AssemblyOriginatorKeyMode>
+    <DocumentationFile>bin\Debug\OBTDBSQLUtils.xml</DocumentationFile>
+    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
+    <NoStdLib>False</NoStdLib>
+    <WarningLevel>4</WarningLevel>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'x86' ">
     <PlatformTarget>x86</PlatformTarget>
+    <RegisterForComInterop>False</RegisterForComInterop>
+    <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
+    <BaseAddress>4194304</BaseAddress>
+    <FileAlignment>4096</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <OutputPath>bin\Debug\</OutputPath>
-    <DebugSymbols>True</DebugSymbols>
+    <DebugSymbols>true</DebugSymbols>
     <DebugType>Full</DebugType>
     <Optimize>False</Optimize>
     <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
@@ -39,22 +54,30 @@
     <Reference Include="System.Data.DataSetExtensions">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data.Entity">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MultipleSQLGenerator.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Data\ADO\ADOManager.cs" />
+    <Compile Include="Data\EDM\EntityTransactionManager.cs" />
+    <Compile Include="Data\GenericDB2CodeGenerator.cs" />
+    <Compile Include="Data\SQL\GenericSQLCodeGenerator.cs" />
+    <Compile Include="OBTDataException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DBSQLUtils\OBTUtils.Data.csproj">
-      <Project>{DAEE2802-8B55-4331-9326-1ADFC94E1A47}</Project>
-      <Name>OBTUtils.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\OBTUtilerias\OBTUtils.csproj">
+    <Folder Include="Data" />
+    <Folder Include="Data\EDM" />
+    <Folder Include="Data\ADO" />
+    <Folder Include="Data\SQL" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\OBTUtils\OBTUtils.csproj">
       <Project>{AF957518-F233-458B-B495-B72B3BAAA548}</Project>
       <Name>OBTUtils</Name>
     </ProjectReference>
