--- a/OBTUtils/OBTUtils.csproj
+++ b/OBTUtils/OBTUtils.csproj
@@ -78,7 +78,6 @@
   <ItemGroup>
     <Compile Include="GenericCompoundResult.cs" />
     <Compile Include="Generic\GenericCompoundResult.cs" />
-    <Compile Include="IncrementalSeeker.cs" />
     <Compile Include="Messaging\FileMessenger.cs" />
     <Compile Include="Messaging\NoMessagesMessenger.cs" />
     <Compile Include="Messaging\StreamMessenger.cs" />
@@ -93,7 +92,9 @@
     <Compile Include="Net\Mail\MailManager.cs" />
     <Compile Include="OBTException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ToolBox.cs" />
+    <Compile Include="Utilities\Bool2Lang.cs" />
+    <Compile Include="Utilities\IncrementalSeeker.cs" />
+    <Compile Include="Utilities\ToolBox.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\OBTResources.resx" />
@@ -103,6 +104,7 @@
     <Folder Include="Net" />
     <Folder Include="Net\Mail" />
     <Folder Include="Generic" />
+    <Folder Include="Utilities" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
 </Project>
