--- a/OBTUtils.Enterprise/OBTUtils.Enterprise.csproj
+++ b/OBTUtils.Enterprise/OBTUtils.Enterprise.csproj
@@ -27,6 +27,7 @@
     <RegisterForComInterop>False</RegisterForComInterop>
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
     <FileAlignment>4096</FileAlignment>
+    <Prefer32Bit>False</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <OutputPath>bin\Debug\</OutputPath>
