Improving the compiling process
Signed-off-by: Rodolfo Conde <aragorn@ciencias.unam.mx>

--- a/Database/OBTMultSQLCodeGen/OBTMultSQLCodeGen.csproj
+++ b/Database/OBTMultSQLCodeGen/OBTMultSQLCodeGen.csproj
@@ -22,11 +22,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'x86' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <BaseAddress>4194304</BaseAddress>
     <RegisterForComInterop>False</RegisterForComInterop>
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
-    <Prefer32Bit>False</Prefer32Bit>
     <FileAlignment>4096</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
