--- a/dotNet/Database/OBTSQL2POJO/OBTSQL2POJO.csproj
+++ b/dotNet/Database/OBTSQL2POJO/OBTSQL2POJO.csproj
@@ -9,6 +9,7 @@
     <AssemblyName>OBTSQL2POJO</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
