--- a/dotNet/OBTUtilsALLTests/OBTUtilsALLTests.csproj
+++ b/dotNet/OBTUtilsALLTests/OBTUtilsALLTests.csproj
@@ -7,7 +7,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>OBTUtilsALLTests</RootNamespace>
     <AssemblyName>OBTUtilsALLTests</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -53,7 +53,7 @@
     <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\OBTUtilerias\OBTUtils.csproj">
+    <ProjectReference Include="..\OBTUtils\OBTUtils.csproj">
       <Project>{AF957518-F233-458B-B495-B72B3BAAA548}</Project>
       <Name>OBTUtils</Name>
     </ProjectReference>
