--- a/dotNet/OBTUtils/OBTUtils.csproj
+++ b/dotNet/OBTUtils/OBTUtils.csproj
@@ -51,6 +51,7 @@
     <Optimize>True</Optimize>
     <CheckForOverflowUnderflow>False</CheckForOverflowUnderflow>
     <DefineConstants>TRACE</DefineConstants>
+    <BaseIntermediateOutputPath>obj\</BaseIntermediateOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore">
