--- a/dotNet/OBTUtilsALLTests/OBTUtilsALLTests.csproj
+++ b/dotNet/OBTUtilsALLTests/OBTUtilsALLTests.csproj
@@ -41,6 +41,7 @@
     <Optimize>True</Optimize>
     <CheckForOverflowUnderflow>False</CheckForOverflowUnderflow>
     <DefineConstants>TRACE</DefineConstants>
+    <BaseIntermediateOutputPath>obj\</BaseIntermediateOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
