--- a/dotNet/Database/OBTMultSQLCodeGen/OBTMultSQLCodeGen.csproj
+++ b/dotNet/Database/OBTMultSQLCodeGen/OBTMultSQLCodeGen.csproj
@@ -45,6 +45,7 @@
     <Optimize>True</Optimize>
     <CheckForOverflowUnderflow>False</CheckForOverflowUnderflow>
     <DefineConstants>TRACE</DefineConstants>
+    <BaseIntermediateOutputPath>obj\</BaseIntermediateOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
